# outlook-email-filter

./: .gitignore  CLAUDE.md  INSTALL-QUICK.md  Install-OutlookFilter.ps1  LICENSE  README.md  install.bat
.github/workflows/: claude-code-review.yml  claude.yml
diagrams/: README.md  activity-classification-chain.mmd  architecture-email-agent.mmd  architecture-full-system.mmd  flow-email-arrival.mmd  flow-user-actions.mmd  sequence-command-bridge.mmd  state-email-lifecycle.mmd
docs/: INSTALL.md  Other_Device_Update_Guide.md  PATTERNS.md  UPDATE_GUIDE_SELF_IMPROVING.md  UPDATE_GUIDE_SUBJECT_RULES.md  USER_MANUAL.md  data-files.md  macros.md
mcp/: README.md  outlook_agent_mcp.py  pyproject.toml  requirements.txt
mcp/tests/: test_mcp_server.py
src/: AgentMemory.bas  BatchFilter.bas  Bridge.bas  Config.bas  EmailAgent.bas  EmailDigest.bas  EmailFilter.bas  Installer.bas  ThisOutlookSession.bas  Utilities.bas  frmDraftReply.frm  frmFilterDashboard.frm
webui/: README.md  auth.py  bridge.py  chat.py  config.py  datafiles.py  macros.py  requirements.txt  server.py  settings_manager.py
webui/static/: app.js  index.html  style.css
webui/tests/: test_webui.py
