[project]
name = "outlook-agent-mcp"
version = "1.0.0"
description = "MCP stdio server exposing the Outlook Email Agent (VBA) command bridge and data files to Claude Desktop / Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
outlook-agent-mcp = "outlook_agent_mcp:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["outlook_agent_mcp"]
